--- a/Client/package.json
+++ b/Client/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "normalize.css": "^8.0.1",
+    "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
@@ -15,6 +17,7 @@
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^4.1.0",
+    "classnames": "^2.3.2",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.55.0"
