--- a/Server/package.json
+++ b/Server/package.json
@@ -28,8 +28,12 @@
   },
   "homepage": "https://github.com/LuongThinh123/burger-shop#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2"
   },
   "devDependencies": {
