--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
+    "react-intersection-observer": "^9.4.3",
+    "react-loading-skeleton": "^3.1.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
